- Tickets can only be deleted by users who have write or manage persmissions on the ticket system.
- Send multiple download links at once
- Permissions on start page announcements so visibility can be controlled
- Easy link checkbox to link e-mail conversations to a contact directly
- Contact photo's are shown in e-mail and can be set much more easily with download URL's.
- Custom field blocks feature
- Models show last modified by username
- In tickets a mail can also be send automatically when a ticket was just claimed
- Mail can be shared read only
- Send the invitation emails in the language of the participant if the participant is a known user of GO.
- Added selection for holiday file to the settings->regional settings panel and to the user dialog in the user module.
- Workflow: history can be appended to PDF files.
- Workflow: Files can be copied to a directory
- Holidays region can be selected per user in the settings dialog.
- Billing catalog, import products: added address book field for newly imported supplier companies.
- Upgraded to Extjs 3.4.1.1

07-06-2013 4.1.74
- Added config option "zpush2_max_attachmentsize". Maximum syncable attachment 
  size in bytes (default 10MB). If you set this too high you'll get a 
  memory_limit exhausted error and sync will fail completely.
- Updated Thai translations
- Unable to upload attachments to e-mail templates
- Added LDAP group synchronization
- Sort file templates alphabetically
- ZIP empty folders broken
- Projects module: show fields in project east panel according to its project template. E.g., if 'manager' is not enabled in the template, it is not displayed.
- Orders can be deleted again except if read only flag is set for status

04-06-2013 4.1.73
- Apache alias defaults to z-push2 now. Be careful with upgrading 
  /etc/apache2/conf.d/groupoffice.conf if you still use z-push 1.5!
- Able to select out of more than 50 address books to add to address list.
- Updated Croatian
- SQL error in notes Upgrade.
